Updated yml files for builder PR testing

--- a/.github/workflows/generated-linux-binary-manywheel-nightly.yml
+++ b/.github/workflows/generated-linux-binary-manywheel-nightly.yml
@@ -450,15 +450,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout pytorch/builder
+      - name: Checkout ROCmSoftwarePlatform/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: test_PR_1412_1413_1414
           submodules: recursive
-          repository: pytorch/builder
+          repository: ROCmSoftwarePlatform/builder
           path: builder
           quiet-checkout: true
-      - name: Clean pytorch/builder checkout
+      - name: Clean ROCmSoftwarePlatform/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -551,15 +551,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout pytorch/builder
+      - name: Checkout ROCmSoftwarePlatform/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: test_PR_1412_1413_1414
           submodules: recursive
-          repository: pytorch/builder
+          repository: ROCmSoftwarePlatform/builder
           path: builder
           quiet-checkout: true
-      - name: Clean pytorch/builder checkout
+      - name: Clean ROCmSoftwarePlatform/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -1010,15 +1010,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout pytorch/builder
+      - name: Checkout ROCmSoftwarePlatform/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: test_PR_1412_1413_1414
           submodules: recursive
-          repository: pytorch/builder
+          repository: ROCmSoftwarePlatform/builder
           path: builder
           quiet-checkout: true
-      - name: Clean pytorch/builder checkout
+      - name: Clean ROCmSoftwarePlatform/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -1111,15 +1111,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout pytorch/builder
+      - name: Checkout ROCmSoftwarePlatform/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: test_PR_1412_1413_1414
           submodules: recursive
-          repository: pytorch/builder
+          repository: ROCmSoftwarePlatform/builder
           path: builder
           quiet-checkout: true
-      - name: Clean pytorch/builder checkout
+      - name: Clean ROCmSoftwarePlatform/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -1570,15 +1570,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout pytorch/builder
+      - name: Checkout ROCmSoftwarePlatform/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: test_PR_1412_1413_1414
           submodules: recursive
-          repository: pytorch/builder
+          repository: ROCmSoftwarePlatform/builder
           path: builder
           quiet-checkout: true
-      - name: Clean pytorch/builder checkout
+      - name: Clean ROCmSoftwarePlatform/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -1671,15 +1671,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout pytorch/builder
+      - name: Checkout ROCmSoftwarePlatform/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: test_PR_1412_1413_1414
           submodules: recursive
-          repository: pytorch/builder
+          repository: ROCmSoftwarePlatform/builder
           path: builder
           quiet-checkout: true
-      - name: Clean pytorch/builder checkout
+      - name: Clean ROCmSoftwarePlatform/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -2130,15 +2130,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout pytorch/builder
+      - name: Checkout ROCmSoftwarePlatform/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: test_PR_1412_1413_1414
           submodules: recursive
-          repository: pytorch/builder
+          repository: ROCmSoftwarePlatform/builder
           path: builder
           quiet-checkout: true
-      - name: Clean pytorch/builder checkout
+      - name: Clean ROCmSoftwarePlatform/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
@@ -2231,15 +2231,15 @@ jobs:
           # Remove any artifacts from the previous checkouts
           git clean -fxd
         working-directory: pytorch
-      - name: Checkout pytorch/builder
+      - name: Checkout ROCmSoftwarePlatform/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: test_PR_1412_1413_1414
           submodules: recursive
-          repository: pytorch/builder
+          repository: ROCmSoftwarePlatform/builder
           path: builder
           quiet-checkout: true
-      - name: Clean pytorch/builder checkout
+      - name: Clean ROCmSoftwarePlatform/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
