--- a/.github/workflows/_binary-build-linux.yml
+++ b/.github/workflows/_binary-build-linux.yml
@@ -18,7 +18,7 @@ on:
       BUILDER_ROOT:
         required: true
         type: string
-        description: Root directory for the pytorch/builder repository
+        description: Root directory for the ROCmSoftwarePlatform/builder repository
       PACKAGE_TYPE:
         required: true
         type: string
@@ -162,16 +162,16 @@ jobs:
           git clean -fxd
         working-directory: pytorch
 
-      - name: Checkout pytorch/builder to builder dir
+      - name: Checkout ROCmSoftwarePlatform/builder to builder dir
         uses: malfet/checkout@silent-checkout
         with:
           ref: main
           submodules: recursive
-          repository: pytorch/builder
+          repository: ROCmSoftwarePlatform/builder
           path: builder
           quiet-checkout: true
 
-      - name: Clean pytorch/builder checkout
+      - name: Clean ROCmSoftwarePlatform/builder checkout
         run: |
           # Remove any artifacts from the previous checkouts
           git clean -fxd
